[package]
name = "idm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-halt = "0.2"
stm32f0xx-hal = { version = "0.18", features = ["stm32f042", "stm32-usbd"] }
usb-device = "0.2"
usbd-serial = "0.1"

defmt-rtt = "0.4.0"
defmt = "0.3"

[profile.dev]
debug = true
lto = true
opt-level = "s"

[profile.release]
lto = true
debug = true
opt-level = "s"
