[package]
name = "idm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
embassy-stm32 = { version = "0.1.0", features = [
    "defmt",
    "memory-x",
    "stm32f042g6",
    "time-driver-any",
    "exti",
    "unstable-pac",
] }
cortex-m = { version = "0.7", features = ["critical-section-single-core"] }
cortex-m-rt = "0.7"

defmt = "0.3"
defmt-rtt = "0.4"
panic-probe = "0.3"

embassy-sync = { version = "0.5.0", features = ["defmt"] }
embassy-executor = { version = "0.5.0", features = [
    "arch-cortex-m",
    "executor-thread",
    "executor-interrupt",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.3.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
    "tick-hz-32_768",
] }
embassy-usb = "0.1"
embassy-futures = "0.1"

[profile.dev]
debug = true
lto = true
opt-level = "s"

[profile.release]
lto = true
debug = true
opt-level = "s"
